--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -7,5 +7,27 @@
 }
 
 .element-container {
-  border-color: red;
+  box-shadow: 1px 4px 8px 12px white;
+  transition: 0.3s;
+  border-radius: 90px; /* 5px rounded corners */
+  padding: 20pt;
+  background-color: green;
+  margin: 20pt;
+  max-width: 200pt;
+  min-width: none;
+}
+
+/* On mouse-over, add a deeper shadow */
+.element-container:hover {
+  box-shadow: 1px 4px 8px 12px #4526a0;
+}
+
+/* Add some padding inside the card container */
+.info-container {
+  padding: 2px 16px;
+}
+
+.elements-container {
+  display: flex;
+  flex-wrap: wrap;
 }
