--- a/src/Components/GoToTop/GoToTop.css
+++ b/src/Components/GoToTop/GoToTop.css
@@ -4,16 +4,40 @@
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
   border: none;
   outline: none;
   background-color: var(--white);
   color: var(--black);
   cursor: pointer;
   padding: 15px;
-  border-radius: 4px;
+  border-radius: 51% 49% 52% 48% / 100% 100% 0% 0%;
 }
 
 #button-up:hover {
   background-color: var(--main-light-color);
+}
+
+#rocket {
+  max-width: 30pt;
+}
+
+@media screen and (max-width: 992px) {
+  #button-up {
+    display: none;
+    position: fixed;
+    bottom: 4px;
+    right: 4px;
+    background-color: var(--white);
+    color: var(--black);
+    padding: 10px;
+    border-radius: 51% 49% 52% 48% / 100% 100% 0% 0%;
+  }
+
+  #button-up:active {
+    background-color: var(--main-light-color);
+  }
+
+  #rocket {
+    max-width: 20pt;
+  }
 }
