--- a/src/index.css
+++ b/src/index.css
@@ -22,20 +22,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* body {
-  overflow: hidden;
-} */
-/* section {
+section {
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url('./Images/bg0.jpg');
-  background-position-x: center;
-  background-size: cover;
-  animation: animateBg 50s linear infinite;
-} */
+}
 
 @keyframes animateBg {
   0%,
@@ -46,7 +40,7 @@ body {
     transform: scale(1.2);
   }
 }
-span {
+#stars span {
   /* position: absolute; */
   position: fixed;
   top: 50%;
@@ -59,7 +53,8 @@ span {
     0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
   animation: animate 3s linear infinite;
 }
-span::before {
+
+#stars span::before {
   content: '';
   /* position: absolute; */
   position: absolute;
@@ -82,7 +77,7 @@ span::before {
     opacity: 0;
   }
 }
-span:nth-child(1) {
+#stars span:nth-child(1) {
   top: 0;
   right: 0;
   left: initial;
@@ -90,7 +85,7 @@ span:nth-child(1) {
   animation-duration: 1s;
 }
 
-span:nth-child(2) {
+#stars span:nth-child(2) {
   top: 0;
   right: 80px;
   left: initial;
@@ -98,7 +93,7 @@ span:nth-child(2) {
   animation-duration: 3s;
 }
 
-span:nth-child(3) {
+#stars span:nth-child(3) {
   top: 80px;
   right: 0px;
   left: initial;
@@ -106,7 +101,7 @@ span:nth-child(3) {
   animation-duration: 2s;
 }
 
-span:nth-child(4) {
+#stars span:nth-child(4) {
   top: 0;
   right: 180px;
   left: initial;
@@ -114,7 +109,7 @@ span:nth-child(4) {
   animation-duration: 1.5s;
 }
 
-span:nth-child(5) {
+#stars span:nth-child(5) {
   top: 0;
   right: 400px;
   left: initial;
@@ -122,14 +117,15 @@ span:nth-child(5) {
   animation-duration: 2.5s;
 }
 
-span:nth-child(6) {
+#stars span:nth-child(6) {
   top: 0;
   right: 600px;
   left: initial;
   animation-delay: 1s;
   animation-duration: 3s;
 }
-span:nth-child(7) {
+
+#stars span:nth-child(7) {
   top: 300px;
   right: 0px;
   left: initial;
@@ -137,7 +133,7 @@ span:nth-child(7) {
   animation-duration: 1.75s;
 }
 
-span:nth-child(8) {
+#stars span:nth-child(8) {
   top: 0px;
   right: 700px;
   left: initial;
@@ -145,7 +141,7 @@ span:nth-child(8) {
   animation-duration: 1.25s;
 }
 
-span:nth-child(9) {
+#stars span:nth-child(9) {
   top: 0px;
   right: 1000px;
   left: initial;
@@ -153,7 +149,7 @@ span:nth-child(9) {
   animation-duration: 2.25s;
 }
 
-span:nth-child(10) {
+#stars span:nth-child(10) {
   top: 0px;
   right: 1000px;
   left: initial;
