--- a/src/Components/GoToTop/GoToTop.css
+++ b/src/Components/GoToTop/GoToTop.css
@@ -1,13 +1,12 @@
 #button-up {
   display: none;
   position: fixed;
-  bottom: 20px;
+  bottom: 0px;
   right: 30px;
   z-index: 99;
-  border: none;
   outline: none;
   background-color: var(--white);
-  color: var(--black);
+  border-color: var(--black);
   cursor: pointer;
   padding: 15px;
   border-radius: 51% 49% 52% 48% / 100% 100% 0% 0%;
@@ -25,7 +24,6 @@
   #button-up {
     display: none;
     position: fixed;
-    bottom: 4px;
     right: 4px;
     background-color: var(--white);
     color: var(--black);
