--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -8,7 +8,7 @@
 }
 
 .element-container {
-  box-shadow: 1px 4px 8px 12px white;
+  box-shadow: 1px 4px 8px 8px rgba(255, 255, 255, 0.332);
   /* transition: 0.3s; */
   border-radius: 10pt; /* 5px rounded corners */
   padding: 15pt;
@@ -20,12 +20,14 @@
 
 /* On mouse-over, add a deeper shadow */
 .element-container:hover {
-  box-shadow: 1px 4px 8px 12px var(--main-light-color);
+  box-shadow: 1px 4px 8px 5px var(--main-light-color);
+  opacity: 0.8;
 }
 
 /* Add some padding inside the card container */
 .info-container {
   padding: 2px 16px;
+  color: var(--white);
 }
 
 .elements-container {
