--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -16,6 +16,7 @@
   background-color: var(--secondary-dark-color);
   margin: 10pt;
   width: 30%;
+  font-size: 15pt;
 }
 
 .element-container:hover {
@@ -38,5 +39,13 @@
 @media screen and (max-width: 992px) {
   .element-container {
     width: 90%;
+    font-size: 10pt;
+  }
+  .elements-container {
+    margin: 10pt;
+  }
+  .text-intro-click-more {
+    font-size: 15pt;
+    margin-top: 10pt;
   }
 }
