--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -40,6 +40,7 @@
   .element-container {
     width: 90%;
     font-size: 10pt;
+    padding: 5pt;
   }
   .elements-container {
     margin: 10pt;
@@ -47,5 +48,6 @@
   .text-intro-click-more {
     font-size: 15pt;
     margin-top: 10pt;
+    margin: 8pt;
   }
 }
