--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: 1px 4px 8px 8px rgba(255, 255, 255, 0.332);
-  border-radius: 10pt; /* 5px rounded corners */
+  border-radius: 10pt;
   padding: 15pt;
   background-color: var(--secondary-dark-color);
   margin: 10pt;
