--- a/src/Components/ObjectsDisplay/ObjectsDisplay.css
+++ b/src/Components/ObjectsDisplay/ObjectsDisplay.css
@@ -41,6 +41,11 @@
   margin-top: 10pt;
 }
 
+.telescope-search {
+  width: 60pt;
+  margin-top: 20pt;
+}
+
 @media screen and (max-width: 992px) {
   .element-container {
     width: 90%;
@@ -56,5 +61,9 @@
     font-size: 15pt;
     margin-top: 10pt;
     margin: 8pt;
+  }
+
+  .telescope-search {
+    width: 40pt;
   }
 }
