--- a/src/Components/CreatedBy/CreatedBy.css
+++ b/src/Components/CreatedBy/CreatedBy.css
@@ -1,17 +1,12 @@
 .created-container {
-  /* display: flex;
-  margin-top: 40px;
-  justify-content: center;
-  text-align: center; */
-  position: relative;
-  bottom: 0;
   left: 0;
   width: 100%;
-  text-align: center;
-  margin-top: 30pt;
   display: flex;
   justify-content: center;
-  margin-bottom: 2pt;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
 }
 
 .created-container a {
@@ -40,8 +35,7 @@
 }
 
 .stars {
-  width: 25pt;
-  height: 100%;
+  max-width: 25pt;
   align-self: center;
 }
 
